added disable telemtry

--- a/templates/answers/3-controller-3-ceph.yaml
+++ b/templates/answers/3-controller-3-ceph.yaml
@@ -1,5 +1,6 @@
 templates: /home/stack/rendered
 environments:
+  - rendered/environments/disable-telemetry.yaml
   - rendered/environments/network-isolation.yaml
   - rendered/environments/network-environment.yaml
   - rendered/environments/net-single-nic-with-vlans.yaml
