CephStorageCount=0 and set NeutronBridgeMappings (possible ovn bug)

--- a/templates/node-info.yaml
+++ b/templates/node-info.yaml
@@ -6,8 +6,10 @@ parameter_defaults:
   OvercloudCephStorageFlavor: ceph-storage
   ControllerCount: 3
   ComputeCount: 2
-  CephStorageCount: 3
+  CephStorageCount: 0
   NeutronEnableIsolatedMetadata: true
   ControllerExtraConfig:
     neutron::agents::dhcp::enable_isolated_metadata: true
+
+  NeutronBridgeMappings: "datacentre:br-ex"
 
