--- a/templates/nics/isolated_4nics/compute-ovn.yaml
+++ b/templates/nics/isolated_4nics/compute-ovn.yaml
@@ -1,6 +1,6 @@
 heat_template_version: queens
 description: >
-  Software Config to drive os-net-config to configure VLANs for the Compute role.
+  Software Config to drive os-net-config to configure VLANs for the Controller role.
 parameters:
   ControlPlaneIp:
     default: ''
@@ -62,7 +62,7 @@ parameters:
     description: The default route of the control plane network.
     type: string
   ExternalInterfaceDefaultRoute:
-    default: '10.0.0.1'
+    default: '172.16.100.32'
     description: default route for the external network
     type: string
   DnsServers: # Override this via parameter_defaults
@@ -105,13 +105,9 @@ resources:
                 - ip_netmask: 169.254.169.254/32
                   next_hop:
                     get_param: EC2MetadataIp
-                - default: true
-                  next_hop:
-                    get_param: ControlPlaneDefaultRoute
                 members:
                 - type: interface
                   name: nic1
-                  # force the MAC address of the bridge to this interface
                   primary: true
                 - type: vlan
                   vlan_id:
@@ -126,8 +122,8 @@ resources:
                 members:
                 - type: interface
                   name: nic2
-                  # force the MAC address of the bridge to this interface
                   primary: true
+
                 - type: vlan
                   vlan_id:
                     get_param: InternalApiNetworkVlanID
@@ -141,8 +137,8 @@ resources:
                 members:
                 - type: interface
                   name: nic3
-                  # force the MAC address of the bridge to this interface
                   primary: true
+
                 - type: vlan
                   vlan_id:
                     get_param: TenantNetworkVlanID
@@ -156,8 +152,18 @@ resources:
                 members:
                 - type: interface
                   name: nic4
-                  # force the MAC address of the bridge to this interface
                   primary: true
+
+                - type: vlan
+                  vlan_id:
+                    get_param: ExternalNetworkVlanID
+                  addresses:
+                  - ip_netmask:
+                      get_param: ExternalIpSubnet
+                  routes:
+                  - default: true
+                    next_hop:
+                      get_param: ExternalInterfaceDefaultRoute
 outputs:
   OS::stack_id:
     description: The OsNetConfigImpl resource.
